--- a/aplicant-list.html
+++ b/aplicant-list.html
@@ -393,7 +393,7 @@
               <div
                 class="d-flex justify-content-between bg-white p-4 rounded-3 shadow-lg align-items-center mb-4"
               >
-                <p class="fs-3 m-0 fw-bold">Total Aplications List-1</p>
+                <p class="fs-3 m-0 fw-bold">Total Applications List-1</p>
                 <button
                   class="btn btn-info text-nowrap"
                   data-bs-toggle="modal"
@@ -409,7 +409,7 @@
                       <p class="fw-semibold">Job ID</p>
                       <p class="text-info">
                         <a
-                          href="#
+                          href="
                         job.html"
                           class="text-decoration-none text-info"
                           >12345</a
@@ -457,12 +457,13 @@
                   </div>
                 </div>
                 <div class="d-flex justify-content-between align-items-center">
-                  <button class="btn btn-outline-dark">Send Bulk SMS</button>
+                  <button class="btn btn-outline-ndark">Send Bulk SMS</button>
                   <select class="form-select rounded" style="width: 100px">
-                    <option selected>25</option>
-                    <option value="1">50</option>
-                    <option value="2">100</option>
-                    <option value="3">200</option>
+                    <option selected>10</option>
+                    <option value="25">25</option>
+                    <option value="50">50</option>
+                    <option value="100">100</option>
+                    <option value="200">200</option>
                   </select>
                 </div>
                 <div class="mt-4 table-responsive">
@@ -538,7 +539,7 @@
                         <td class="text-nowrap">Khalid Rahman</td>
 
                         <td class="text-nowrap">
-                          <button class="btn btn-dark py-1 px-2">Take</button>
+                          <button class="btn btn-ndark py-1 px-2">Take</button>
                           <button class="btn btn-pink py-1 px-2">
                             Shortlist
                           </button>
@@ -593,7 +594,7 @@
                         <td class="text-nowrap">Khalid Rahman</td>
 
                         <td class="text-nowrap">
-                          <button class="btn btn-dark py-1 px-2">Take</button>
+                          <button class="btn btn-ndark py-1 px-2">Take</button>
                           <button class="btn btn-pink py-1 px-2">
                             Shortlist
                           </button>
@@ -648,7 +649,7 @@
                         <td class="text-nowrap">Khalid Rahman</td>
 
                         <td class="text-nowrap">
-                          <button class="btn btn-outline-dark py-1 px-2">
+                          <button class="btn btn-outline-ndark py-1 px-2">
                             Taken
                           </button>
                           <button class="btn btn-pink py-1 px-2">
@@ -705,7 +706,7 @@
                         <td class="text-nowrap">Khalid Rahman</td>
 
                         <td class="text-nowrap">
-                          <button class="btn btn-dark py-1 px-2">Take</button>
+                          <button class="btn btn-ndark py-1 px-2">Take</button>
                           <button class="btn btn-outline-pink py-1 px-2">
                             Shortlisted
                           </button>
@@ -806,6 +807,5 @@
     ></script>
     <script src="/js/sidebar.js"></script>
     <script src="/js/owl/owl.carousel.min.js"></script>
-    
   </body>
 </html>
