--- a/job-edit-history.html
+++ b/job-edit-history.html
@@ -414,7 +414,7 @@
                         <p class="fw-semibold">Parents ID</p>
                         <p class="">
                           <a
-                            href="#
+                            href="
                         job.html"
                             class="text-decoration-none text-info"
                             >12345</a
@@ -463,7 +463,7 @@
                         <p class="fw-semibold">Reference ID</p>
                         <p class="">
                           <a
-                            href="#
+                            href="
                         job.html"
                             class="text-decoration-none text-info"
                             >12345</a
@@ -814,7 +814,7 @@
                         <p class="fw-semibold">Source ID</p>
                         <p class="">
                           <a
-                            href="#
+                            href="
                         job.html"
                             class="text-decoration-none text-info"
                             >12345</a
