--- a/search-tutor.html
+++ b/search-tutor.html
@@ -399,11 +399,21 @@
                   >
                     <p class="text-nowrap">Search Tutors</p>
                     <div>
-                      <button class="btn btn-outline-primary py-1">
+                      <button
+                        class="btn btn-outline-primary py-1"
+                        style="
+                          box-shadow: 0px 4px 7px 0px rgba(59, 60, 61, 0.75);
+                        "
+                      >
                         <p class="p-0 m-0">SMS Ranges</p>
                         <p class="p-0 m-0">5</p>
                       </button>
-                      <button class="btn btn-outline-info py-1">
+                      <button
+                        class="btn btn-outline-info py-1"
+                        style="
+                          box-shadow: 0px 4px 7px 0px rgba(59, 60, 61, 0.75);
+                        "
+                      >
                         <p class="p-0 m-0">SMS Send</p>
                         <p class="p-0 m-0">50</p>
                       </button>
@@ -438,11 +448,21 @@
                   >
                     <p class="text-nowrap">Search Tutors</p>
                     <div>
-                      <button class="btn btn-outline-primary py-1">
+                      <button
+                        class="btn btn-outline-primary py-1"
+                        style="
+                          box-shadow: 0px 4px 7px 0px rgba(59, 60, 61, 0.75);
+                        "
+                      >
                         <p class="p-0 m-0">SMS Ranges</p>
                         <p class="p-0 m-0">5</p>
                       </button>
-                      <button class="btn btn-outline-info py-1">
+                      <button
+                        class="btn btn-outline-info py-1"
+                        style="
+                          box-shadow: 0px 4px 7px 0px rgba(59, 60, 61, 0.75);
+                        "
+                      >
                         <p class="p-0 m-0">SMS Send</p>
                         <p class="p-0 m-0">50</p>
                       </button>
@@ -501,8 +521,15 @@
                             100%
                           </p>
 
-                          <div class="checkbox-wrapper-13 me-1">
-                            <input id="c1-13" type="checkbox" checked />
+                          <div class="checkbox-wrapper-1">
+                            <input
+                              id="example-1"
+                              class="substituted"
+                              type="checkbox"
+                              aria-hidden="true"
+                              checked
+                            />
+                            <label for="example-1"></label>
                           </div>
                         </div>
                         <div
@@ -531,8 +558,14 @@
                           >
                             100%
                           </p>
-                          <div class="checkbox-wrapper-13 me-1">
-                            <input id="c1-13" type="checkbox" />
+                          <div class="checkbox-wrapper-1">
+                            <input
+                              id="example-1"
+                              class="substituted"
+                              type="checkbox"
+                              aria-hidden="true"
+                            />
+                            <label for="example-1"></label>
                           </div>
                         </div>
                         <div
@@ -561,8 +594,14 @@
                           >
                             100%
                           </p>
-                          <div class="checkbox-wrapper-13 me-1">
-                            <input id="c1-13" type="checkbox" />
+                          <div class="checkbox-wrapper-1">
+                            <input
+                              id="example-1"
+                              class="substituted"
+                              type="checkbox"
+                              aria-hidden="true"
+                            />
+                            <label for="example-1"></label>
                           </div>
                         </div>
                         <div
@@ -591,8 +630,14 @@
                           >
                             100%
                           </p>
-                          <div class="checkbox-wrapper-13 me-1">
-                            <input id="c1-13" type="checkbox" />
+                          <div class="checkbox-wrapper-1">
+                            <input
+                              id="example-1"
+                              class="substituted"
+                              type="checkbox"
+                              aria-hidden="true"
+                            />
+                            <label for="example-1"></label>
                           </div>
                         </div>
                         <div
@@ -621,8 +666,14 @@
                           >
                             100%
                           </p>
-                          <div class="checkbox-wrapper-13 me-1">
-                            <input id="c1-13" type="checkbox" checked />
+                          <div class="checkbox-wrapper-1">
+                            <input
+                              id="example-1"
+                              class="substituted"
+                              type="checkbox"
+                              aria-hidden="true"
+                            />
+                            <label for="example-1"></label>
                           </div>
                         </div>
                         <div
@@ -651,8 +702,14 @@
                           >
                             100%
                           </p>
-                          <div class="checkbox-wrapper-13 me-1">
-                            <input id="c1-13" type="checkbox" checked />
+                          <div class="checkbox-wrapper-1">
+                            <input
+                              id="example-1"
+                              class="substituted"
+                              type="checkbox"
+                              aria-hidden="true"
+                            />
+                            <label for="example-1"></label>
                           </div>
                         </div>
                       </div>
@@ -688,6 +745,5 @@
     ></script>
     <script src="/js/sidebar.js"></script>
     <script src="/js/owl/owl.carousel.min.js"></script>
-    
   </body>
 </html>
