--- a/see-condition.html
+++ b/see-condition.html
@@ -417,7 +417,7 @@
                           01
                         </td>
                         <td>
-                          <a href="#" class="text-decoration-none text-info"
+                          <a href="job.html" class="text-decoration-none text-info"
                             >12345</a
                           >
                         </td>
@@ -476,7 +476,7 @@
                           01
                         </td>
                         <td>
-                          <a href="#" class="text-decoration-none text-info"
+                          <a href="job.html" class="text-decoration-none text-info"
                             >12345</a
                           >
                         </td>
@@ -731,14 +731,14 @@
                 <div class="modal-body p-0">
                   <table class="table shadow-none">
                     <thead
-                      class="text-dark"
-                      style="background-color: #3378c2; color: white"
+                      class="text-white"
+                      style="background-color: #3378c2; "
                     >
                       <tr class="">
                         <th
                           scope="col"
                           class="border-end border-1"
-                          style="border-top-left-radius: 8px"
+                          style="border-top-left-radius: 8px;"
                         >
                           Name
                         </th>
