--- a/applications.html
+++ b/applications.html
@@ -402,8 +402,8 @@
               >
               <a
                 class="text-decoration-none text-gray-800 active-border"
-                href="aplications.html"
-                >Aplications</a
+                href="applications.html"
+                >Applications</a
               >
               <a
                 class="text-decoration-none text-gray-800"
@@ -419,13 +419,13 @@
                   class="bg-white p-3 rounded-3 shadow-lg d-flex justify-content-center align-items-center flex-column mb-2"
                 >
                   <p class="fw-bold fs-5 mb-1 mt-3">234567</p>
-                  <p class="">Total Aplications</p>
+                  <p class="">Total Applications</p>
                 </div>
                 <div
                   class="bg-white p-3 rounded-3 shadow-lg d-flex justify-content-center align-items-center flex-column mb-2"
                 >
                   <p class="fw-bold fs-5 mb-1 mt-3">23567</p>
-                  <p class="">Todays Aplications</p>
+                  <p class="">Todays Applications</p>
                 </div>
                 <div
                   class="bg-white p-3 rounded-3 shadow-lg d-flex justify-content-center align-items-center flex-column mb-2"
@@ -473,10 +473,11 @@
                     placeholder="Search"
                   />
                   <select class="form-select rounded" style="width: 100px">
-                    <option selected>100</option>
-                    <option value="1">200</option>
-                    <option value="2">400</option>
-                    <option value="3">500</option>
+                    <option selected>50</option>
+                    <option value="100">100</option>
+                    <option value="200">200</option>
+                    <option value="400">400</option>
+                    <option value="500">500</option>
                   </select>
                 </div>
               </div>
@@ -486,7 +487,10 @@
                     class="table table-hover bg-white shadow-none"
                     style="border-collapse: collapse"
                   >
-                    <thead class="text-dark" style="border-bottom: 1px solid #c8ced3">
+                    <thead
+                      class="text-dark"
+                      style="border-bottom: 1px solid #c8ced3"
+                    >
                       <tr>
                         <th scope="col" class="text-nowrap">
                           <input
@@ -502,9 +506,9 @@
                         <th scope="col" class="text-nowrap">Location</th>
                         <th scope="col">EM</th>
                         <th scope="col" class="text-nowrap">
-                          Total Aplications
+                          Total applications
                         </th>
-                        <th scope="col" class="text-nowrap">New Aplications</th>
+                        <th scope="col" class="text-nowrap">New applications</th>
                       </tr>
                     </thead>
                     <tbody>
@@ -530,7 +534,9 @@
                           </a>
                         </td>
                         <td class="text-info">
-                          <a href="#" class="text-decoration-none text-info"
+                          <a
+                            href="job.html"
+                            class="text-decoration-none text-info"
                             >12345</a
                           >
                         </td>
@@ -580,7 +586,9 @@
                           </a>
                         </td>
                         <td class="text-info">
-                          <a href="#" class="text-decoration-none text-info"
+                          <a
+                            href="job.html"
+                            class="text-decoration-none text-info"
                             >12345</a
                           >
                         </td>
@@ -604,7 +612,7 @@
                             style="padding: 0px 5px 0px 5px"
                             href="aplicant-list.html"
                           >
-                            4
+                            0
                           </a>
                         </td>
                       </tr>
@@ -630,7 +638,9 @@
                           </a>
                         </td>
                         <td class="text-info">
-                          <a href="#" class="text-decoration-none text-info"
+                          <a
+                            href="job.html"
+                            class="text-decoration-none text-info"
                             >12345</a
                           >
                         </td>
@@ -716,10 +726,10 @@
           >
             <div
               class="modal-dialog modal-dialog-centered px-3"
-              style="max-width: 1100px"
+              style="max-width: 900px"
             >
-              <div class="modal-content px-4 pt-3 pb-4">
-                <div class="modal-header">
+              <div class="modal-content pt-4 pb-4 ps-2">
+                <div class="modal-header pe-5" style="padding-left: 40px">
                   <h1 class="modal-title fs-5" id="exampleModalLabel">
                     Filter
                     <span class="text-muted fw-light" style="font-size: 12">
@@ -734,127 +744,171 @@
                   ></button>
                 </div>
                 <div class="modal-body py-0">
-                  <div class="row row-cols-1 row-cols-lg-3 pb-2">
-                    <div class="pb-3 border-end border-2">
-                      <label for="date" class="form-label">Date from</label>
-                      <input
-                        type="date"
-                        class="form-control shadow rounded-2"
-                        id="date"
-                      />
-                    </div>
-                    <div class="pb-3 border-end border-2">
-                      <label for="date" class="form-label">Category</label>
+                  <div class="row row-cols-2 row-cols-lg-3 pb-2 ps-4 pt-2">
+                    <div class="d-flex ">
+                      <div class="flex-grow-1">
+                        <div class="pb-3">
+                          <label for="datef" class="form-label"
+                            >Date From</label
+                          >
 
-                      <select
-                        class="shadow rounded-2 form-select"
-                        aria-label="Default select example"
-                      >
-                        <option selected>Bangla Medium</option>
-                        <option value="1">English Medium</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
-                      </select>
-                    </div>
-                    <div class="mb-3">
-                      <label for="date" class="form-label">City</label>
+                          <input
+                            type="date"
+                            class="form-control shadow rounded-2"
+                            id="datef"
+                          />
+                        </div>
+                        <div class="pb-3">
+                          <label for="datet" class="form-label"
+                            >Date From</label
+                          >
 
-                      <select
-                        class="shadow rounded-2 form-select"
-                        aria-label="Default select example"
-                      >
-                        <option selected>Bangla Medium</option>
-                        <option value="1">One</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
-                      </select>
+                          <input
+                            type="date"
+                            class="form-control shadow rounded-2"
+                            id="datet"
+                          />
+                        </div>
+                        <div class="pb-3">
+                          <label for="jobid" class="form-label">Job ID</label>
+
+                          <input
+                            type="text"
+                            class="form-control shadow rounded-2"
+                            id="jobid"
+                            placeholder="2345"
+                          />
+                        </div>
+                      </div>
+                      <div
+                        class="mb-3 ms-4"
+                        style="
+                          margin-top: 34px;
+                          width: 1px;
+                          background-color: #f0f1f2;
+                        "
+                      ></div>
+                    </div>
+                    <div class="d-flex justify-content-between">
+                      <div class="flex-grow-1">
+                        <div class="mb-3">
+                          <label for="cat" class="form-label">Category</label>
+
+                          <select
+                            id="cat"
+                            class="shadow rounded-2 form-select"
+                            aria-label="Default select example"
+                          >
+                            <option selected>Bangla Medium</option>
+                            <option value="1">One</option>
+                            <option value="2">Two</option>
+                            <option value="3">Three</option>
+                          </select>
+                        </div>
+                        <div class="mb-3">
+                          <label for="crs" class="form-label">Course</label>
+
+                          <select
+                            id="crs"
+                            class="shadow rounded-2 form-select"
+                            aria-label="Default select example"
+                          >
+                            <option selected>Class 8</option>
+                            <option value="1">One</option>
+                            <option value="2">Two</option>
+                            <option value="3">Three</option>
+                          </select>
+                        </div>
+                        <div class="mb-3">
+                          <label for="coun" class="form-label">Country</label>
+
+                          <select
+                            id="coun"
+                            class="shadow rounded-2 form-select"
+                            aria-label="Default select example"
+                          >
+                            <option selected>Bangladesh</option>
+                            <option value="1">One</option>
+                            <option value="2">Two</option>
+                            <option value="3">Three</option>
+                          </select>
+                        </div>
+                      </div>
+                      <div
+                        class="mb-3 ms-4"
+                        style="
+                          margin-top: 34px;
+                          width: 1px;
+                          background-color: #f0f1f2;
+                        "
+                      ></div>
                     </div>
 
-                    <div class="pb-3 border-end border-2">
-                      <label for="date" class="form-label">Date To</label>
-                      <input
-                        type="date"
-                        class="form-control shadow rounded-2"
-                        id="date"
-                      />
-                    </div>
-                    <div class="pb-3 border-end border-2">
-                      <label for="date" class="form-label">Course</label>
+                    <div class="d-flex justify-content-start">
+                      <div class="flex-grow-1" style="padding-right: 30px">
+                        <div class="mb-3">
+                          <label for="cty" class="form-label">City</label>
 
-                      <select
-                        class="shadow rounded-2 form-select"
-                        aria-label="Default select example"
-                      >
-                        <option selected>Class 8</option>
-                        <option value="1">Class 9</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
-                      </select>
-                    </div>
-                    <div class="mb-3">
-                      <label for="date" class="form-label">Location</label>
+                          <select
+                            id="cty"
+                            class="shadow rounded-2 form-select"
+                            aria-label="Default select example"
+                          >
+                            <option selected>Dhaka</option>
+                            <option value="1">One</option>
+                            <option value="2">Two</option>
+                            <option value="3">Three</option>
+                          </select>
+                        </div>
+                        <div class="mb-3">
+                          <label for="loc" class="form-label">Location</label>
 
-                      <select
-                        class="shadow rounded-2 form-select"
-                        aria-label="Default select example"
-                      >
-                        <option selected>Mirpur 1</option>
-                        <option value="1">Mirpur 2</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
-                      </select>
-                    </div>
+                          <select
+                            id="loc"
+                            class="shadow rounded-2 form-select"
+                            aria-label="Default select example"
+                          >
+                            <option selected>Mirpur-1</option>
+                            <option value="1">One</option>
+                            <option value="2">Two</option>
+                            <option value="3">Three</option>
+                          </select>
+                        </div>
+                        <div class="mb-3">
+                          <label for="loc" class="form-label"
+                            >Application Views</label
+                          >
 
-                    <div class="pb-3 border-end border-2">
-                      <label for="name" class="form-label">Job Id</label>
-                      <input
-                        type="text"
-                        class="form-control shadow rounded-2"
-                        id="name"
-                        placeholder="12356"
-                      />
-                    </div>
-                    <div class="pb-3 border-end border-2">
-                      <label for="date" class="form-label">Country</label>
-
-                      <select
-                        class="shadow rounded-2 form-select"
-                        aria-label="Default select example"
-                      >
-                        <option selected>Bangladesh</option>
-                        <option value="1">One</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
-                      </select>
-                    </div>
-                    <div class="mb-3">
-                      <label for="date" class="form-label"
-                        >Aplication Views</label
-                      >
-                      <select
-                        class="shadow rounded-2 form-select"
-                        aria-label="Default select example"
-                      >
-                        <option selected>Seen</option>
-                        <option value="1">Unseen</option>
-                      </select>
+                          <select
+                            id="loc"
+                            class="shadow rounded-2 form-select"
+                            aria-label="Default select example"
+                          >
+                            <option selected>Seen</option>
+                            <option value="1">Unseen</option>
+                          </select>
+                        </div>
+                      </div>
+                      <!-- Dont remove this unnessary wrapper flex div -->
                     </div>
                   </div>
-                </div>
-                <div
-                  class="modal-footer d-flex justify-content-end align-items-center"
-                >
-                  <button type="button" class="btn btn-danger py-1 me-2">
-                    Clear
-                  </button>
-                  <button type="button" class="btn btn-primary py-1">
-                    Apply
-                  </button>
+
+                  <div
+                    class="modal-footer d-flex justify-content-end align-items-center me-3"
+                  >
+                    <div>
+                      <button type="button" class="btn btn-danger py-1 me-2">
+                        Clear
+                      </button>
+                      <button type="button" class="btn btn-primary py-1">
+                        Apply
+                      </button>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
-
           <!-- Filter Model ends here -->
 
           <!--Date model starts here-->
@@ -893,7 +947,7 @@
                       <div
                         class="text-white px-4"
                         style="
-                          border-radius: 8px 0 0 0;
+                          border-radius: 7px 0 0 0;
                           padding: 35px 0;
                           background-color: #3378c2;
                         "
@@ -909,7 +963,7 @@
                       <div
                         class="text-white px-4"
                         style="
-                          border-radius: 0 8px 0 0;
+                          border-radius: 0 7px 0 0;
                           padding: 35px 0;
                           background-color: #3378c2;
                         "
@@ -989,8 +1043,42 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+    <script>
+      $(document).ready(function () {
+        $(".owl-carousel").owlCarousel({
+          loop: true,
+          autoplay: true,
+          autoplayTimeout: 1500,
+          autoplayHoverPause: true,
+          autoplaySpeed: 1000,
+          margin: 10,
+          responsiveClass: true,
+          nav: true,
+          navText: [
+            "<i class='bi bi-chevron-right arrow-icon'></i>",
+            "<i class='bi bi-chevron-left arrow-icon'></i>",
+          ],
+          navClass: ["carousel-nav-btn-prev", "carousel-nav-btn-next"],
+          responsive: {
+            0: {
+              items: 1,
+              nav: true,
+              loop: true,
+            },
+            600: {
+              items: 2,
+              loop: true,
+            },
+            1000: {
+              items: 4,
+              nav: true,
+              loop: true,
+            },
+          },
+        });
+      });
+    </script>
     <script src="/js/sidebar.js"></script>
     <script src="/js/owl/owl.carousel.min.js"></script>
-    
   </body>
 </html>
