--- a/job-edit-history-original.html
+++ b/job-edit-history-original.html
@@ -414,7 +414,7 @@
                         <p class="fw-semibold">Parents ID</p>
                         <p class="">
                           <a
-                            href="#
+                            href="
                         job.html"
                             class="text-decoration-none text-info"
                             >12345</a
@@ -436,9 +436,7 @@
                       <div
                         class="row row-cols-2 border-bottom border-1 mb-3 g-0 mx-4"
                       >
-                        <p class="fw-semibold">
-                          When are you looking to hire?
-                        </p>
+                        <p class="fw-semibold">When are you looking to hire?</p>
                         <p class="">03/06/2023</p>
                       </div>
                     </div>
@@ -463,7 +461,7 @@
                         <p class="fw-semibold">Reference ID</p>
                         <p class="">
                           <a
-                            href="#
+                            href="
                         job.html"
                             class="text-decoration-none text-info"
                             >12345</a
@@ -473,8 +471,7 @@
                       <div
                         class="m-4 p-4 rounded-3 d-flex justify-content-between align-items-center flex-column"
                         style="
-                          box-shadow: 0px 4px 30px 0px
-                            rgba(59, 60, 61, 0.15);
+                          box-shadow: 0px 4px 30px 0px rgba(59, 60, 61, 0.15);
                           height: 135px;
                         "
                       >
@@ -685,9 +682,7 @@
                       <div
                         class="row row-cols-2 border-bottom border-1 mb-3 g-0 mx-4"
                       >
-                        <p class="fw-semibold">
-                          Preferred Tutoring Category
-                        </p>
+                        <p class="fw-semibold">Preferred Tutoring Category</p>
                         <p class="">Professional Skills Mastery</p>
                       </div>
                       <div
@@ -814,7 +809,7 @@
                         <p class="fw-semibold">Source ID</p>
                         <p class="">
                           <a
-                            href="#
+                            href="
                         job.html"
                             class="text-decoration-none text-info"
                             >12345</a
@@ -865,6 +860,5 @@
         return new bootstrap.Popover(popoverTriggerEl);
       });
     </script>
-    
   </body>
 </html>
