--- a/layout.html
+++ b/layout.html
@@ -401,7 +401,7 @@
                 >Available offers</a
               >
               <a class="text-decoration-none text-gray-800" href="index.html"
-                >Aplications</a
+                >Applications</a
               >
               <a
                 class="text-decoration-none text-gray-800"
