--- a/sms-log.html
+++ b/sms-log.html
@@ -426,19 +426,22 @@
                       class="table table-hover bg-white shadow-none"
                       style="border-collapse: collapse"
                     >
-                    <thead class="text-dark" style="border-bottom: 1px solid #c8ced3">
-                      <tr>
+                      <thead
+                        class="text-dark"
+                        style="border-bottom: 1px solid #c8ced3"
+                      >
+                        <tr>
                           <th scope="col" class="text-nowrap ps-4">SL</th>
                           <th scope="col" class="text-nowrap">Job ID</th>
                           <th scope="col" class="text-nowrap">Sender Name</th>
                           <th scope="col" class="text-nowrap">Sender Id</th>
-                          <th scope="col" class="text-nowrap">Sender Title</th>
+                          <th scope="col" class="text-nowrap">sms Title</th>
                           <th scope="col" class="text-nowrap">Tutor Id</th>
 
                           <th scope="col" class="text-nowrap">Tutor Phone</th>
 
                           <th scope="col" class="text-nowrap">Created At</th>
-                          <th scope="col" class="text-nowrap">Action</th>
+                          <th scope="col" class="text-nowrap ps-4">Action</th>
                         </tr>
                       </thead>
                       <tbody>
@@ -843,8 +846,8 @@
                 class="modal-dialog modal-dialog-centered px-3"
                 style="max-width: 1100px"
               >
-                <div class="modal-content px-4 pt-3 pb-4">
-                  <div class="modal-header">
+                <div class="modal-content pt-4 pb-4 ps-2">
+                  <div class="modal-header pe-5" style="padding-left: 40px">
                     <h1 class="modal-title fs-5" id="exampleModalLabel">
                       Filter
                       <span class="text-muted fw-light" style="font-size: 12">
@@ -859,104 +862,152 @@
                     ></button>
                   </div>
                   <div class="modal-body py-0">
-                    <div class="row row-cols-2 row-cols-lg-4 pb-2">
-                      <div class="pb-3 border-end border-2">
-                        <label for="date" class="form-label"
-                          >Employee Name</label
-                        >
+                    <div class="row row-cols-2 row-cols-lg-4 pb-2 ps-4 pt-2">
+                      <div class="d-flex">
+                        <div>
+                          <div class="pb-3">
+                            <label for="en" class="form-label"
+                              >Employee Name</label
+                            >
 
-                        <select
-                          class="shadow rounded-2 form-select"
-                          aria-label="Default select example"
-                        >
-                          <option selected>Select Employee Name</option>
-                          <option value="1">One</option>
-                          <option value="2">Two</option>
-                          <option value="3">Three</option>
-                        </select>
-                      </div>
-                      <div class="pb-3 border-end border-2">
-                        <label for="phone" class="form-label"
-                          >Received Number</label
-                        >
-                        <input
-                          type="phone"
-                          class="form-control shadow rounded-2"
-                          id="phone"
-                        />
-                      </div>
+                            <select
+                              id="en"
+                              class="shadow rounded-2 form-select"
+                              aria-label="Default select example"
+                            >
+                              <option selected>Select Employee Name</option>
+                              <option value="1">One</option>
+                              <option value="2">Two</option>
+                              <option value="3">Three</option>
+                            </select>
+                          </div>
+                          <div class="pb-3">
+                            <label for="eid" class="form-label"
+                              >Employee ID</label
+                            >
 
-                      <div class="pb-3 border-end border-2">
-                        <label for="date" class="form-label"
-                          >Created At From</label
-                        >
-                        <input
-                          type="date"
-                          class="form-control shadow rounded-2"
-                          id="date"
-                        />
+                            <input
+                              type="text"
+                              class="form-control shadow rounded-2"
+                              id="eid"
+                              placeholder="123567"
+                            />
+                          </div>
+                        </div>
+                        <div
+                          class="mb-3 ms-4"
+                          style="
+                            margin-top: 34px;
+                            width: 1px;
+                            background-color: #f0f1f2;
+                          "
+                        ></div>
                       </div>
-                      <div class="mb-3">
-                        <label for="date" class="form-label">SMS Method</label>
+                      <div class="d-flex justify-content-between">
+                        <div class="flex-grow-1">
+                          <div class="pb-3">
+                            <label for="rn" class="form-label"
+                              >Received Number</label
+                            >
+                            <input
+                              type="phone"
+                              class="form-control shadow rounded-2"
+                              id="rn"
+                            />
+                          </div>
+                          <div class="pb-3">
+                            <label for="smsbody" class="form-label"
+                              >SMS Body</label
+                            >
 
-                        <select
-                          class="shadow rounded-2 form-select"
-                          aria-label="Default select example"
-                        >
-                          <option selected>Pullup</option>
-                          <option value="1">One</option>
-                          <option value="2">Two</option>
-                          <option value="3">Three</option>
-                        </select>
+                            <input
+                              type="text"
+                              class="form-control shadow rounded-2"
+                              id="smsbody"
+                              placeholder="SMS Body"
+                            />
+                          </div>
+                        </div>
+                        <div
+                          class="mb-3 ms-4"
+                          style="
+                            margin-top: 34px;
+                            width: 1px;
+                            background-color: #f0f1f2;
+                          "
+                        ></div>
                       </div>
-
-                      <div class="pb-3 border-end border-2">
-                        <label for="id" class="form-label">Employee ID</label>
-
-                        <input
-                          type="text"
-                          class="form-control shadow rounded-2"
-                          id="id"
-                          placeholder="123567"
-                        />
+                      <div class="d-flex">
+                        <div class="flex-grow-1">
+                          <div class="pb-3">
+                            <label for="caf" class="form-label"
+                              >Created At From</label
+                            >
+                            <input
+                              type="date"
+                              class="form-control shadow rounded-2"
+                              id="caf"
+                            />
+                          </div>
+                          <div class="pb-3">
+                            <label for="cat" class="form-label"
+                              >Created At To</label
+                            >
+                            <input
+                              type="date"
+                              class="form-control shadow rounded-2"
+                              id="cat"
+                            />
+                          </div>
+                        </div>
+                        <div
+                          class="mb-3 ms-4"
+                          style="
+                            margin-top: 34px;
+                            width: 1px;
+                            background-color: #f0f1f2;
+                          "
+                        ></div>
                       </div>
-                      <div class="pb-3 border-end border-2">
-                        <label for="smsbody" class="form-label">SMS Body</label>
+                      <div class="d-flex justify-content-start ">
+                        <div class="flex-grow-1 " style="padding-right: 30px;">
+                          <div class="mb-3">
+                            <label for="smsm" class="form-label"
+                              >SMS Method</label
+                            >
 
-                        <input
-                          type="text"
-                          class="form-control shadow rounded-2"
-                          id="smsbody"
-                          placeholder="SMS Body"
-                        />
-                      </div>
-                      <div class="pb-3 border-end border-2">
-                        <label for="date" class="form-label"
-                          >Created At To</label
-                        >
-                        <input
-                          type="date"
-                          class="form-control shadow rounded-2"
-                          id="date"
-                        />
-                      </div>
-                      <div class="mb-3">
-                        <label for="date" class="form-label">Other</label>
+                            <select
+                              id="smsm"
+                              class="shadow rounded-2 form-select"
+                              aria-label="Default select example"
+                            >
+                              <option selected>Pullup</option>
+                              <option value="1">One</option>
+                              <option value="2">Two</option>
+                              <option value="3">Three</option>
+                            </select>
+                          </div>
+                          <div class="mb-3">
+                            <label for="other" class="form-label">Other</label>
 
-                        <select
-                          class="shadow rounded-2 form-select"
-                          aria-label="Default select example"
-                        >
-                          <option selected>Other</option>
-                          <option value="1">One</option>
-                          <option value="2">Two</option>
-                          <option value="3">Three</option>
-                        </select>
+                            <select
+                              id="other"
+                              class="shadow rounded-2 form-select"
+                              aria-label="Default select example"
+                            >
+                              <option selected>Other</option>
+                              <option value="1">One</option>
+                              <option value="2">Two</option>
+                              <option value="3">Three</option>
+                            </select>
+                          </div>
+                        </div>
+                        <!-- Dont remove this unnessary wrapper flex div -->
                       </div>
                     </div>
 
                     <div
-                      class="modal-footer d-flex justify-content-end align-items-center px-0"
+                      class="modal-footer d-flex justify-content-end align-items-center me-3"
                     >
                       <div>
                         <button type="button" class="btn btn-danger py-1 me-2">
@@ -989,6 +1040,5 @@
     ></script>
     <script src="/js/sidebar.js"></script>
     <script src="/js/owl/owl.carousel.min.js"></script>
-    
   </body>
 </html>
