--- a/search-tutor.html
+++ b/search-tutor.html
@@ -398,7 +398,7 @@
                     class="d-flex justify-content-between align-items-start flex-column flex-lg-row align-items-lg-center"
                   >
                     <p class="text-nowrap">Search Tutors</p>
-                    <div>
+                    <div class="d-flex gap-3">
                       <button
                         class="btn btn-outline-primary py-1"
                         style="
@@ -417,7 +417,7 @@
                         <p class="p-0 m-0">SMS Send</p>
                         <p class="p-0 m-0">50</p>
                       </button>
-                      <button class="btn btn-dark" style="height: 52px">
+                      <button class="btn btn-ndark" style="height: 52px">
                         Reset
                       </button>
                     </div>
@@ -447,7 +447,7 @@
                     class="d-flex justify-content-between align-items-start flex-column flex-lg-row align-items-lg-center"
                   >
                     <p class="text-nowrap">Search Tutors</p>
-                    <div>
+                    <div class="d-flex gap-3">
                       <button
                         class="btn btn-outline-primary py-1"
                         style="
@@ -466,7 +466,7 @@
                         <p class="p-0 m-0">SMS Send</p>
                         <p class="p-0 m-0">50</p>
                       </button>
-                      <button class="btn btn-dark" style="height: 52px">
+                      <button class="btn btn-ndark" style="height: 52px">
                         Reset
                       </button>
                     </div>
@@ -521,15 +521,8 @@
                             100%
                           </p>
 
-                          <div class="checkbox-wrapper-1">
-                            <input
-                              id="example-1"
-                              class="substituted"
-                              type="checkbox"
-                              aria-hidden="true"
-                              checked
-                            />
-                            <label for="example-1"></label>
+                          <div class="checkbox-wrapper-13">
+                            <input id="c1-13" type="checkbox" />
                           </div>
                         </div>
                         <div
@@ -558,14 +551,8 @@
                           >
                             100%
                           </p>
-                          <div class="checkbox-wrapper-1">
-                            <input
-                              id="example-1"
-                              class="substituted"
-                              type="checkbox"
-                              aria-hidden="true"
-                            />
-                            <label for="example-1"></label>
+                          <div class="checkbox-wrapper-13">
+                            <input id="c1-13" type="checkbox" />
                           </div>
                         </div>
                         <div
@@ -594,14 +581,8 @@
                           >
                             100%
                           </p>
-                          <div class="checkbox-wrapper-1">
-                            <input
-                              id="example-1"
-                              class="substituted"
-                              type="checkbox"
-                              aria-hidden="true"
-                            />
-                            <label for="example-1"></label>
+                          <div class="checkbox-wrapper-13">
+                            <input id="c1-13" type="checkbox" />
                           </div>
                         </div>
                         <div
@@ -630,14 +611,8 @@
                           >
                             100%
                           </p>
-                          <div class="checkbox-wrapper-1">
-                            <input
-                              id="example-1"
-                              class="substituted"
-                              type="checkbox"
-                              aria-hidden="true"
-                            />
-                            <label for="example-1"></label>
+                          <div class="checkbox-wrapper-13">
+                            <input id="c1-13" type="checkbox" />
                           </div>
                         </div>
                         <div
@@ -666,14 +641,8 @@
                           >
                             100%
                           </p>
-                          <div class="checkbox-wrapper-1">
-                            <input
-                              id="example-1"
-                              class="substituted"
-                              type="checkbox"
-                              aria-hidden="true"
-                            />
-                            <label for="example-1"></label>
+                          <div class="checkbox-wrapper-13">
+                            <input id="c1-13" type="checkbox" />
                           </div>
                         </div>
                         <div
@@ -702,14 +671,8 @@
                           >
                             100%
                           </p>
-                          <div class="checkbox-wrapper-1">
-                            <input
-                              id="example-1"
-                              class="substituted"
-                              type="checkbox"
-                              aria-hidden="true"
-                            />
-                            <label for="example-1"></label>
+                          <div class="checkbox-wrapper-13">
+                            <input id="c1-13" type="checkbox" />
                           </div>
                         </div>
                       </div>
