--- a/status-log.html
+++ b/status-log.html
@@ -7,9 +7,8 @@
     <link rel="icon" href="/assets/fav.png" />
     <link rel="stylesheet" href="/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/css/color_palets.css" />
+    <link rel="stylesheet" href="css/custom-switch-and-checkbox.css"/>
     <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/css/owl/owl.carousel.min.css" />
-    <link rel="stylesheet" href="/css/owl/owl.theme.default.min.css" />
 
     <link
       rel="stylesheet"
@@ -422,14 +421,16 @@
 
                         <td class="text-nowrap">403</td>
                         <td class="text-info">
-                          <div class="form-check form-switch">
-                            <input
-                              class="form-check-input"
-                              type="checkbox"
-                              role="switch"
-                              id="flexSwitchCheckDefault"
-                              style="transform: scale(1.5)"
-                            />
+                          <div class="switch-toggle">
+                            <div class="button-check" id="button-check">
+                              <input
+                                type="checkbox"
+                                class="checkbox"
+                                checked
+                              />
+                              <span class="switch-btn"></span>
+                              <span class="layer"></span>
+                            </div>
                           </div>
                         </td>
                         <td class="text-nowrap">
@@ -450,14 +451,16 @@
 
                         <td class="text-nowrap">403</td>
                         <td class="text-info">
-                          <div class="form-check form-switch">
-                            <input
-                              class="form-check-input"
-                              type="checkbox"
-                              role="switch"
-                              id="flexSwitchCheckDefault"
-                              style="transform: scale(1.5)"
-                            />
+                          <div class="switch-toggle">
+                            <div class="button-check" id="button-check">
+                              <input
+                                type="checkbox"
+                                class="checkbox"
+                                checked
+                              />
+                              <span class="switch-btn"></span>
+                              <span class="layer"></span>
+                            </div>
                           </div>
                         </td>
                         <td class="text-nowrap">
