--- a/see-condition.html
+++ b/see-condition.html
@@ -417,7 +417,9 @@
                           01
                         </td>
                         <td>
-                          <a href="job.html" class="text-decoration-none text-info"
+                          <a
+                            href="job.html"
+                            class="text-decoration-none text-info"
                             >12345</a
                           >
                         </td>
@@ -476,7 +478,9 @@
                           01
                         </td>
                         <td>
-                          <a href="job.html" class="text-decoration-none text-info"
+                          <a
+                            href="job.html"
+                            class="text-decoration-none text-info"
                             >12345</a
                           >
                         </td>
@@ -559,24 +563,31 @@
                         class="d-flex justify-content-between align-items-center"
                       >
                         <div>
-                          <p class="mb-0 text-dark fs-5">Sohag Sarkar</p>
+                          <p class="mb-0 text-dark fs-5">Fahmida Tayba</p>
                           <p class="text-info" style="font-size: 12px">
                             ID-23456
                           </p>
                         </div>
                         <div><p>June 17, 2023</p></div>
                       </div>
-                      <p>
-                        doloremque dolorem dolor, delectus repellendus expedita
-                        modi distinctio voluptate voluptas impedit. Corrupti est
-                        expedita non qui accusamus illum quam, cum cumque saepe
-                        excepturi rem.
-                      </p>
+                      <div>
+                        <p class="" style="font-size: 16px; color: #3b3c3d">
+                          Note Title
+                        </p>
+                        <p>
+                          doloremque dolorem dolor, delectus repellendus
+                          expedita modi distinctio voluptate voluptas impedit.
+                          Corrupti est expedita non qui accusamus illum quam,
+                          cum cumque saepe excepturi rem.
+                        </p>
+                      </div>
                       <div
                         class="d-flex justify-content-between align-items-center"
                       >
                         <div>
-                          <p>Read More</p>
+                          <p style="font-size: 16px; color: #3b3c3d">
+                            Read More
+                          </p>
                         </div>
                         <div>
                           <button class="btn btn-primary py-1">Edit</button>
@@ -597,12 +608,17 @@
                         </div>
                         <div><p>June 17, 2023</p></div>
                       </div>
-                      <p>
-                        doloremque dolorem dolor, delectus repellendus expedita
-                        modi distinctio voluptate voluptas impedit. Corrupti est
-                        expedita non qui accusamus illum quam, cum cumque saepe
-                        excepturi rem.
-                      </p>
+                      <div>
+                        <p class="text-gay-900" style="font-size: 16px">
+                          Note Title
+                        </p>
+                        <p>
+                          doloremque dolorem dolor, delectus repellendus
+                          expedita modi distinctio voluptate voluptas impedit.
+                          Corrupti est expedita non qui accusamus illum quam,
+                          cum cumque saepe excepturi rem.
+                        </p>
+                      </div>
                       <div
                         class="d-flex justify-content-between align-items-center"
                       >
@@ -621,19 +637,24 @@
                         class="d-flex justify-content-between align-items-center"
                       >
                         <div>
-                          <p class="mb-0 text-dark fs-5">Sohag Sarkar</p>
+                          <p class="mb-0 text-dark fs-5">Fahmida Tayba</p>
                           <p class="text-info" style="font-size: 12px">
                             ID-23456
                           </p>
                         </div>
                         <div><p>June 17, 2023</p></div>
                       </div>
-                      <p>
-                        doloremque dolorem dolor, delectus repellendus expedita
-                        modi distinctio voluptate voluptas impedit. Corrupti est
-                        expedita non qui accusamus illum quam, cum cumque saepe
-                        excepturi rem.
-                      </p>
+                      <div>
+                        <p class="" style="font-size: 16px; color: #3b3c3d">
+                          Note Title
+                        </p>
+                        <p>
+                          doloremque dolorem dolor, delectus repellendus
+                          expedita modi distinctio voluptate voluptas impedit.
+                          Corrupti est expedita non qui accusamus illum quam,
+                          cum cumque saepe excepturi rem.
+                        </p>
+                      </div>
                       <div
                         class="d-flex justify-content-between align-items-center"
                       >
@@ -730,15 +751,12 @@
               <div class="modal-content mx-4">
                 <div class="modal-body p-0">
                   <table class="table shadow-none">
-                    <thead
-                      class="text-white"
-                      style="background-color: #3378c2; "
-                    >
+                    <thead class="text-white" style="background-color: #3378c2">
                       <tr class="">
                         <th
                           scope="col"
                           class="border-end border-1"
-                          style="border-top-left-radius: 8px;"
+                          style="border-top-left-radius: 8px"
                         >
                           Name
                         </th>
@@ -758,9 +776,9 @@
                     <tbody>
                       <tr class="" style="vertical-align: middle">
                         <th scope="row" class="text-nowrap border-end border-1">
-                          Fahmida Rahman
+                          Fahmida Tayba
                         </th>
-                        <td class="text-info border-end border-1">234567</td>
+                        <td class="text-info border-end border-1">56123</td>
                         <td class="text-nowrap border-end border-1">
                           <p class="mb-0">14-06-2023</p>
                           <p class="mb-0 text-muted">47: 15: 12 PM</p>
@@ -776,6 +794,17 @@
                             quibusdam tempora!
                           </p>
                         </td>
+                      </tr>
+                      <tr class="" style="vertical-align: middle">
+                        <th scope="row" class="text-nowrap border-end border-1">
+                          Sajid HDY
+                        </th>
+                        <td class="text-info border-end border-1">56145</td>
+                        <td class="text-nowrap border-end border-1">
+                          <p class="mb-0">29-06-2023</p>
+                          <p class="mb-0 text-muted">47: 15: 12 PM</p>
+                        </td>
+                        <td>Seen Profile</td>
                       </tr>
                     </tbody>
                   </table>
@@ -799,6 +828,5 @@
     ></script>
     <script src="/js/sidebar.js"></script>
     <script src="/js/owl/owl.carousel.min.js"></script>
-    
   </body>
 </html>
